<resources>
    <string name="app_name">FirebaseLoginApp</string>
    <string name="action_sign_in_short">Cadastro</string>
    <string name="email">Email</string>
    <string name="minimum_password">Senha muito curta, digite no mínimo 6 caracteres!</string>
    <string name="auth_failed">Falha na autenticação, verifique seu e-mail e senha ou inscreva-se</string>
    <string name="change_email">Mude o e-mail</string>
    <string name="change_password">Mudar senha</string>
    <string name="send_password_reset_email">Enviar email de redefinição de senha</string>
    <string name="remove_user">Remover Usuario</string>
    <string name="new_pass">Nova Senha</string>
    <string name="title_activity_profile">FuraFila</string>
    <string name="title_activity_login">Cadastrar</string>
    <string name="hint_email">Digite seu Email</string>
    <string name="hint_password">Digite sua Senha</string>
    <string name="hint_name">Nome Completo</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Por Favor,Insira sua senha</string>
    <string name="btn_link_to_register">Não é um membro? Registre-se no FuraFila agora!</string>
    <string name="btn_link_to_login">Já registrado.Efetue Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="btn_reset_password">Redefinir Senha</string>
    <string name="btn_back"><![CDATA[<< Voltar]]></string>
    <string name="hint_new_email">Novo Email</string>
    <string name="btn_change">Mude</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Remover</string>
    <string name="btn_sign_out">Sair</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="forgot_password_msg">Precisamos apenas do seu endereço de e-mail registrado para enviar a você as instruções de redefinição de senha.</string>
    <string name="email_id">Email ID</string>


    <string-array name="horarios_atendimento">
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
    </string-array>
</resources>
